--- a/Assignment 4/Assignment4.ipynb
+++ b/Assignment 4/Assignment4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "id": "d8edc4d7-dfd4-43fe-83d7-5a16a803a18e",
    "metadata": {},
    "outputs": [
@@ -10,52 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(52.3671947, 4.919245)\n",
-      "(52.3862001, 4.8812058)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\quent\\AppData\\Local\\Temp\\ipykernel_11644\\3982971718.py:14: UserWarning: The `utils.config` function is deprecated and will be removed in a future release. Instead, use the `settings` module directly to configure a global setting's value. For example, `ox.settings.log_console=True`.\n",
-      "  ox.config(use_cache=True, log_console=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3781170134, 55.4897645320106) (305081090, 54.87161258524928)\n",
+      "The coordinates of the start point are (52.3671947, 4.919245) and of the end point: (52.3862001, 4.8812058)\n",
       "Node found.\n",
-      "Node found.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\quent\\AppData\\Local\\Temp\\ipykernel_11644\\3982971718.py:37: UserWarning: The `get_route_edge_attributes` function has been deprecated and will be removed in a future release. Use the `route_to_gdf` function instead.\n",
-      "  length = sum(ox.utils_graph.get_route_edge_attributes(canals, path, 'length'))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3781170134, 323929882, 331854233, 8010136114, 252142901, 324827507, 305155548, 305155547, 305156166, 8003741421, 9407684484, 324128505, 324126395, 1195429031, 730950175, 277138134, 178261171, 60740843, 117738457, 154546029, 305084168, 305082709, 305081090]\n",
-      "12\n",
-      "324126395\n",
-      "{'y': 52.3768364, 'x': 4.9027817, 'street_count': 3}\n",
-      "5004.24\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\quent\\AppData\\Local\\Temp\\ipykernel_11644\\3982971718.py:63: UserWarning: The `get_route_edge_attributes` function has been deprecated and will be removed in a future release. Use the `route_to_gdf` function instead.\n",
-      "  lengths = ox.utils_graph.get_route_edge_attributes(canals, path, 'length')\n"
+      "Node found.\n",
+      "The nodes of the whole path are [3781170134, 323929882, 331854233, 8010136114, 252142901, 324827507, 305155548, 305155547, 305156166, 8003741421, 9407684484, 324128505, 324126395, 1195429031, 730950175, 277138134, 178261171, 60740843, 117738457, 154546029, 305084168, 305082709, 305081090]\n",
+      "The 12 th node is the middle one with the corresponding OSMid being: 324126395\n",
+      "The length of the path in meters is 5004.24\n"
      ]
     },
     {
@@ -73,34 +33,31 @@
     "import osmnx as ox\n",
     "import networkx as nx\n",
     "import math\n",
+    "import warnings\n",
+    "\n",
+    "#Hides annoying warnings :)\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "#Find coordinates of Artis (start point)\n",
     "location_ARTIS = ox.geocode(\"Entrepotdok 86, Amsterdam, Netherlands\")\n",
-    "print(location_ARTIS)\n",
     "\n",
     "#Find coordinates of Westerpark (end point)\n",
     "location_Westerpark = ox.geocode(\"Westerpark 1, Amsterdam, Netherlands\")\n",
-    "print(location_Westerpark)\n",
+    "print('The coordinates of the start point are', location_ARTIS, 'and of the end point:', location_Westerpark)\n",
     "\n",
     "#This gets all the canal data from Amsterdam\n",
-    "ox.config(use_cache=True, log_console=True)\n",
     "canals = ox.graph_from_place('Amsterdam, Netherlands', retain_all=False, truncate_by_edge=False,\n",
     "                        simplify=True, custom_filter='[\"waterway\"~\"canal\"]')\n",
-    "\n",
     "\n",
     "#Find the nearest nodes nearest node\n",
     "nodes_ARTIS = ox.distance.nearest_nodes(canals, location_ARTIS[1], location_ARTIS[0], return_dist=True)\n",
     "nodes_Westerpark = ox.distance.nearest_nodes(canals, location_Westerpark[1], location_Westerpark[0], return_dist=True)\n",
-    "print(nodes_ARTIS, nodes_Westerpark)\n",
     "\n",
     "#Check if nodes exist\n",
     "if nodes_ARTIS[0] in canals.nodes:\n",
     "    print(\"Node found.\")\n",
     "if nodes_Westerpark[0] in canals.nodes:\n",
     "    print(\"Node found.\")\n",
-    "\n",
-    "#Shortest path between the two points\n",
-    "#path = ox.shortest_path(canals, nodes_ARTIS[0], nodes_point2[0])\n",
     "\n",
     "#This loop ensures a route is found between the start and end point of at least 5000m\n",
     "L = 5000 #The route is 5000m long\n",
@@ -112,16 +69,14 @@
     "i, length, path\n",
     "\n",
     "#These are the nodes of the path\n",
-    "print(path)\n",
+    "print('The nodes of the whole path are', path)\n",
     "\n",
     "#Since the path is an odd list, this calculates the middle node\n",
     "middle_node = math.ceil(len(path) / 2)\n",
-    "print(middle_node)\n",
-    "print(path[middle_node])\n",
+    "print('The', middle_node, 'th node is the middle one with the corresponding OSMid being:', path[middle_node])\n",
     "\n",
     "#Zoom in with middle point as center for bbox\n",
     "node_middle = canals.nodes(data=True)[path[middle_node]]\n",
-    "print(node_middle)\n",
     "bbox = ox.utils_geo.bbox_from_point((node_middle['y'], node_middle['x']), dist=2200)\n",
     "\n",
     "#Plot graph of canals\n",
@@ -134,33 +89,26 @@
     "#This calculates the length of the path\n",
     "lengths = ox.utils_graph.get_route_edge_attributes(canals, path, 'length')\n",
     "path_length = sum(lengths)\n",
-    "print(path_length)\n",
-    "\n",
-    "#shortest_path = nx.shortest_path_length(canals, nodes_ARTIS[0], nodes_point2[0], weight='length')\n",
-    "#print(shortest_path)\n",
-    "\n",
-    "#print(canals.nodes[3781170134]['x'], canals.nodes[3781170134]['y'])\n",
-    "#node0 = canals.nodes(data=True)[nodes_ARTIS[0]]\n",
-    "#node1 = canals.nodes(data=True)[nodes_point2[0]]\n",
-    "#print(node0['x'], node0['y'])\n",
-    "#print(node1['x'], node0['y'])\n"
+    "print('The length of the path in meters is', path_length)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "id": "18929828-9d12-4fcc-b749-33fa8793469c",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\quent\\AppData\\Local\\Temp\\ipykernel_11644\\126531336.py:2: UserWarning: The `utils.config` function is deprecated and will be removed in a future release. Instead, use the `settings` module directly to configure a global setting's value. For example, `ox.settings.log_console=True`.\n",
-      "  ox.config(use_cache=True, log_console=True)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x2131bfd3a10>"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -175,40 +123,32 @@
    ],
    "source": [
     "#This gets all the walkway data from Amsterdam\n",
-    "ox.config(use_cache=True, log_console=True)\n",
     "walk = ox.graph_from_place('Amsterdam, Netherlands', network_type='walk')\n",
     "\n",
     "#Plot graph of walkways\n",
     "bbox = ox.utils_geo.bbox_from_point((node_middle['y'], node_middle['x']), dist=1200)\n",
     "fig, ax = ox.plot_graph(walk, bbox=bbox, show=False, close=False)\n",
-    "\n"
+    "#ax.scatter(canals.nodes[node_middle['x']], canals.nodes[node_middle['y']], c='red')\n",
+    "ax.scatter(52.3768364, 4.9027817, c='red')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 70,
    "id": "35adf564-97fe-429a-86ab-73612321ac87",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1244055730, 21.449568174364654) (2308110616, 14.16857166756093) (10898968649, 6817815.1868821755)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#First we convert the coordinates of the start, middle and end point to nodes within the walk network\n",
     "nodes_ARTIS_walk = ox.distance.nearest_nodes(walk, location_ARTIS[1], location_ARTIS[0], return_dist=True)\n",
     "nodes_Westerpark_walk = ox.distance.nearest_nodes(walk, location_Westerpark[1], location_Westerpark[0], return_dist=True)\n",
     "nodes_middle_walk = ox.distance.nearest_nodes(walk, node_middle['y'], node_middle['x'], return_dist=True)\n",
-    "print(nodes_ARTIS_walk, nodes_Westerpark_walk, nodes_middle_walk)"
+    "#print(nodes_ARTIS_walk, nodes_Westerpark_walk, nodes_middle_walk)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 71,
    "id": "f8d3dc97-7b96-4a79-b51b-f4365389eb8d",
    "metadata": {},
    "outputs": [
@@ -237,10 +177,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c65570f-ca24-4e72-a3e3-15f015b19a4e",
+   "id": "23df9013-3e67-4c09-9dcf-ba18634f911a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#References\n",
+    "'''\n",
+    "https://github.com/gboeing/osmnx-examples\n",
+    "https://wiki.openstreetmap.org/wiki/Key:highway\n",
+    "https://networkx.org/documentation/stable/reference/algorithms/centrality.html\n",
+    "https://osmnx.readthedocs.io/en/stable/user-reference.html#\n",
+    "https://bookdown.org/markhoff/social_network_analysis/centrality.html#closeness-centrality\n",
+    "https://stackoverflow.com/questions/49460880/adding-a-point-to-an-osmnx-plot\n",
+    "'''\n"
+   ]
   }
  ],
  "metadata": {
