--- a/Assignment 3/Assignment_AirBnB.ipynb
+++ b/Assignment 3/Assignment_AirBnB.ipynb
@@ -93,7 +93,7 @@
     "import os.path\n",
     "import re\n",
     "\n",
-    "path = \"Assignment 3/listings.csv\"\n",
+    "path = \"/listings.csv\"\n",
     "\n",
     "bnb_df = pd.read_csv(path)\n",
     "\n",
